# ChessClouds

./: .gitignore  README.md  docker-compose.yml  repomix-output.xml  template.env
.github/workflows/: upload-image.yml  web-test-build.yml
engine/: .gitignore  Dockerfile  docker-compose.yml  readme.md  repomix-output.xml  supervisord.conf  upload-engine-images.yml
engine/actix/: Cargo.toml  Dockerfile
engine/actix/src/: main.rs
engine/axum/: Cargo.toml  Dockerfile
engine/axum/src/: main.rs
engine/fastapi/: Dockerfile  main.py
engine/hyper/: Cargo.toml
engine/hyper/src/: main.rs
engine/stockfish/: Dockerfile
engine/terraform/eks/: main.tf  outputs.tf  providers.tf  variables.tf
matchmaking/: Cargo.toml  Dockerfile  README.md  diesel.toml  readme.md
matchmaking/.sqlx/: query-b56eb881f600de5902a7793f31abaad90d2d31bb0b014b4d75e97b4c1dfafc0e.json  query-eb1ba2d8661b99b897a330e5e2619536efd300649ff71579844dbafb4b52de12.json  query-ec85b4b4b0c3731794ac31c9233de52c839d8cc2cea517341b72acfa0edff1e8.json
matchmaking/bindings/: Color.ts  MatchRequest.ts  MatchResponse.ts
matchmaking/src/: main.rs  models.rs  schema.rs
terraform/: .gitignore  .terraform.lock.hcl  README.md  main.tf  outputs.tf  provider.tf  template.tfvars  terraform.tfstate  terraform.tfstate.backup  terraform.tfvars  variables.tf
terraform/application/: alb.tf  cloudwatch.tf  ecs.tf  iam.tf  main.tf  output.tf  security.tf  ssm.tf  variables.tf  vpc.tf
terraform/engine/: iam.tf  main.tf  security.tf  variables.tf
terraform/matchmaking/: init.sh  main.tf  security.tf  variables.tf
terraform/websocket/: init.sh  main.tf  security.tf  variables.tf
web/: .gitignore  Dockerfile  README.md  docker-compose.yml  drizzle.config.ts  entrypoint.sh  next.config.ts  package.json  pnpm-lock.yaml  repomix-output.xml  tailwind.config.js
web/drizzle/: 0000_dark_dragon_man.sql  schema.ts
web/drizzle/meta/: 0000_snapshot.json  _journal.json
web/prisma/: schema.prisma
web/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
web/src/components/: AnimationProvider.tsx  ChessBoard.tsx  ChessCloud.tsx  ChessNotations.tsx  ClientLayout.tsx  ComputerGamePane.tsx  CustomChessBoard.tsx  DisplayChessBoard.tsx  Error.tsx  Footer.tsx  GamePane.tsx  LoadingScreen.tsx  NavBar.tsx  RouteProtection.tsx  SocketGameComponent.tsx  SocketGamePane.tsx  ThemeProvider.tsx  ThemeSwitch.tsx  Unauthorized.tsx  chessground.tsx
web/src/db/: schema.ts
web/src/lib/: ClientLayout.tsx  LoadingContext.tsx  MatchmakingContext.tsx  db.ts  engine.ts  gameService.ts  matchmakingService.ts  socket.ts  socketService.ts  time.ts
web/src/types/: dashboard-props.ts  engineTypes.ts  shared.ts  (+5 more)
ws_server/: Cargo.toml  Dockerfile  README.md  readme.md  repomix-output.xml  ws-server-repomix-output.xml
ws_server/.sqlx/: query-0a4166e875f26d30f411eefae145e2d9631c25b7fc4906912e2ce5229df54230.json  query-1f362cae8748b36d7ff12321241464c77cbbef1f4b166060686ddd18b29d2507.json  query-a3c7b0aed18944560b13a0452e0259132bd09b2984e43f6910cb447a784746c6.json  query-abee11b95d025cec50eeb7d12fbbad1379043ae1529773a971d59e5ee9afa658.json
ws_server/bindings/: ClientMessage.ts  Color.ts  Error.ts  InitBody.ts  Outcome.ts  ServerMessage.ts
ws_server/src/: game_state.rs  handler.rs  lib.rs  main.rs  message.rs  route.rs  state.rs
ws_server/src/route/: games.rs  init.rs  ws.rs
(+37 files in other folders)
