[package]
name = "matchmaking"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.3", features = ["ws"] }
axum-macros = "0.5.0"
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["macros", "postgres", "runtime-tokio", "tls-native-tls", "uuid"] }
tokio = { version = "1.44.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
ts-rs = "10.1.0"
uuid = { version = "1.16.0", features = ["v4"] }
tower-http = { version = "0.5.2", features = ["cors"] }
