[package]
name = "ws_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
axum-macros = "0.5.0"
dashmap = "6.1.0"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shakmaty = "0.27.3"
tokio = { version = "1.44.1", features = ["full"] }
