[package]
name = "ws_server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.3", features = ["ws"] }
axum-macros = "0.5.0"
futures-util = "0.3.31"
scc = "2.3.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
shakmaty = { version = "0.27.3", features = ["serde"] }
tokio = { version = "1.44.1", features = ["full"] }
